# esp32c3-try-mqtt

./: Cargo.toml  build.rs
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
