[package]
name = "esp32c3-try-mqtt"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
strip = true
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-svc = "0.23.2"
esp-idf-hal = "0.39.4"
esp-idf-svc = "0.43.5"
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }


[build-dependencies]
embuild = "0.30.4"
